# multiHypothesesTracking

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
cmake_extensions/: FindCplex.cmake  FindGUROBI.cmake  FindHDF5.cmake  FindVIGRA.cmake
conda-recipe/: README  Readme.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.sh
include/: covertree.h  covertreeinferencemodel.h  covertreenode.h  divisionhypothesis.h  exclusionconstraint.h  helpers.h  jsonmodel.h  linkinghypothesis.h  model.h  nodevisitor.h  segmentationhypothesis.h  settings.h  variable.h
include/conservation/: linkinghypothesis.h  model.h  segmentationhypothesis.h  variable.h
include/multihypothesis/: exclusionconstraint.h  linkinghypothesis.h  model.h  segmentationhypothesis.h
python/: CMakeLists.txt  pymultiHypoTracking.cpp  pymultiHypoTracking.cpp.cmake  pythonmodel.cpp  pythonmodel.h
scripts/: compareSolutions.py
src/: covertree.cpp  covertreeinferencemodel.cpp  covertreenode.cpp  divisionhypothesis.cpp  exclusionconstraint.cpp  helpers.cpp  jsonmodel.cpp  linkinghypothesis.cpp  model.cpp  nodevisitor.cpp  segmentationhypothesis.cpp  settings.cpp  variable.cpp
src/conservation/: linkinghypothesis.cpp  model.cpp  segmentationhypothesis.cpp  variable.cpp
src/multihypothesis/: exclusionconstraint.cpp  linkinghypothesis.cpp  model.cpp  segmentationhypothesis.cpp
test/: CMakeLists.txt  constrackinggt-new-divs.json  constrackinggt.json  constrackingmodel-new-divs.json  constrackingmodel.json  example.json  gt.json  gt.txt  json_reader.cpp  magic.json  simplest_example.cpp  test.py  weights.json
